# YelloClaw

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
configs/: sample.plugin.config.json
dev-step/: 001-step-fb.md  001-step.md  002-step-fb.md  002-step.md  003-step.md  004-step.md  yellowclaw-issues.md
docs/: README-examples.md  app-entrypoint-integration.md  app-flow.md  architecture.md  callback-flow.md  checkpoint-status.md  core-vs-relay-boundary.md  decisions.md  entrypoint-entrypoint-check.md  entrypoint-runtime-check.md  entrypoint-runtime.md  final-mvp-check.md  final-mvp-guide.md  implementation-notes.md  kakao-contracts.md  kakao-schema-check.md  macmini-ngrok-plan.md  mvp-call-chain.md  mvp-checklist.md  mvp-example.md  plugin-bootstrap.md  plugin-config.md  plugin-entrypoint.md  plugin-runtime-contract.md  plugin-runtime-entrypoint-boundary.md  policy-check.md  policy.md  quick-replies.md  rendering-check.md  rendering-contract-check.md  rendering-validation.md  rendering.md  runtime-code-alignment.md  runtime-code-review.md  runtime-contract-alignment.md  sdk-refactor-plan.md  session-manager-check.md  session-manager.md  session-ttl-and-expiration.md  (+5 more)
tools/agent-outbox/: pyproject.toml
tools/agent-outbox/app/: auth.py  db.py  main.py  routes.py  schemas.py  watcher.py
tools/mock-relay/: .env.example  README.md  pyproject.toml
tools/mock-relay/app/: __init__.py  auth.py  main.py  routes.py  schemas.py  state.py
tools/mock-relay/tests/: test_mock_relay.py
(+39 files in other folders)
