[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yellowclaw-mock-relay"
version = "0.1.0"
description = "Local mock relay server for YellowClaw contract validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
